# cotton_color

./: .gitignore  CMakeLists.txt  README.md  cotton_color.cpp  cotton_color.sln  cotton_color.vcxproj  cotton_color.vcxproj.filters  cotton_color2.cpp  opencv_onnx.cpp  opencv_template_matching.py
DPL/: CPU条件下预测速度.md  README.md  main.py
DPL/dgd_class/: models.py  predict.py  predict_11.19.py  train.py  train_11.19.py
DPL/model_cls/: export.py  models.py  predict.py  preprocess.py  train.py
DPL/yolov5/: detect.py  detect_12_2.py  mask.py  mask_11.18.py  model.py  test2.py  train.py
DPL/yolov5-master/: detect.py  train.py  val.py
DPL/yolov5/classify/: predict.py
DPL/yolov5/data/: dimo.yaml  dimo3.yaml  dimo4.yaml
DPL/yolov5/data/scripts/: dimo4.yaml
Matrox/: README.md  color_range.cpp  color_range.h  onnx_running.cpp  onnx_running.h  template_matching.cpp  template_matching.h  utils.cpp  utils.h
YOLO/: README.md
YOLO/yolov5-master/data/: dimo2.yaml
YOLO/yolov5-master/datasets/dimo2/labels/train/: 0_162.txt
YOLO/yolov5-master/datasets/dimo3/labels/train/: 1_104.txt  1_116.txt  1_12.txt  1_142.txt  1_144.txt  1_155.txt  1_157.txt  1_193.txt  1_215.txt  1_221.txt  1_277.txt  1_284.txt  1_286.txt  1_302.txt  1_306.txt  1_325.txt  1_345.txt  1_348.txt  1_352.txt  1_369.txt  1_378.txt  1_39.txt  1_391.txt  1_392.txt  1_393.txt  1_394.txt  1_398.txt  1_399.txt  1_52.txt  1_7.txt  1_99.txt
YOLO/yolov5-master/datasets/dimo3/labels/val/: 1_0.txt  1_1.txt  1_10.txt  1_100.txt  1_101.txt  1_102.txt  1_103.txt  1_104.txt  1_105.txt  1_106.txt  1_107.txt  1_108.txt  1_109.txt  1_110.txt  1_111.txt  1_112.txt  1_113.txt  1_114.txt  1_115.txt  1_116.txt  1_117.txt  1_118.txt  1_119.txt  1_12.txt  1_120.txt  1_121.txt  1_122.txt  1_123.txt  1_124.txt  1_125.txt  1_126.txt  1_127.txt  1_128.txt  1_129.txt  1_13.txt  1_130.txt  1_131.txt  1_132.txt  1_133.txt  1_134.txt  (+355 more)
doc/: MatroxQ&A.md
socket/: socket.py  socket2.py  test.py
src/: CMakeLists.txt
src/CVDL/: OnnxRunner.cpp  OnnxRunner.h
src/Matrox/: README.md  color_range.cpp  color_range.h  mask.cpp  mask.h  onnx_running.cpp  template_matching.cpp  template_matching.h  ui.cpp  ui.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_MILtoMat.cpp  test_color_range.cpp  test_color_range_2threads.cpp  test_mask.cpp  test_onnx.cpp  test_template_matching.cpp  test_total.cpp
